--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,23 @@ h1 {
 #map {
   bottom:0px;
   height: 100%;
-  left: 262px;
-  position: absolute;
-  right: 0px;
+}
+
+.close-btn {
+ float: right;
+}
+
+.close-btn,
+.open-btn {
+ background-color: black;
+ color: white;
+ border-radius: 3px;
+ border-style: none;
+ margin-bottom: 10px;
 }
 
 .options-box {
-  background: #54545436;
+  background: #a0a0a0b8;
   border: 1px solid #999;
   border-radius: 3px;
   height: 100%;
@@ -39,9 +49,17 @@ h1 {
   padding: 10px 10px 30px 10px;
   text-align: left;
   width: 240px;
+  z-index: 1;
+  overflow-x: hidden;
+  position: fixed;
 }
 
 #corporations-search {
   width: 70%;
 }
 
+.main {
+   transition: margin-left .5s;
+   padding: 16px;
+   height: 100%;
+ }
